--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
-<!DOCTYPE html><html lang="de">
+<!DOCTYPE html>
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Shader mit Orbit Kamera + Auto-Rotation</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background: black;
-      height: 100%;
-    }
-    canvas {
-      width: 100vw;
-      height: 100vh;
-      display: block;
-      cursor: grab;
-    }
-    canvas:active {
-      cursor: grabbing;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Shader mit Orbit Controls (Maus & Touch)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<style>
+  html, body {
+    margin: 0; padding: 0; overflow: hidden; background: black;
+    height: 100%;
+    user-select: none;
+    touch-action: none;
+  }
+  canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    cursor: grab;
+    touch-action: none;
+  }
+  canvas:active {
+    cursor: grabbing;
+  }
+</style>
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
+
+<!-- Vertex Shader -->
 <script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
-</script><script type="x-shader/x-fragment">
+</script>
+
+<!-- Fragment Shader -->
+<script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
@@ -40,80 +46,93 @@ mat3 rotationY(float a) {
   float s = sin(a), c = cos(a);
   return mat3(c,0.0,-s, 0.0,1.0,0.0, s,0.0,c);
 }
-
+mat3 rotationZ(float a) {
+  float s = sin(a), c = cos(a);
+  return mat3(c,s,0.0, -s,c,0.0, 0.0,0.0,1.0);
+}
 float fBox(vec3 p, vec3 b) {
   vec3 d = abs(p) - b;
-  return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
+  return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0);
 }
+float scene(vec3 p, float time) {
+  float baseSize = 0.3 + 0.05 * sin(time * 0.3);
+  float smallBoxSize = 0.1 + 0.03 * cos(time * 0.5);
+  float sphereRadius = 0.4 + 0.07 * sin(time * 0.2 + 1.0);
+  float translation = 0.15 * sin(time * 0.1);
 
-float scene(vec3 p) {
-  float b1 = 0.3;
-  vec3 q = p;
-  for (int i = 0; i < 4; i++) {
-    q = vec3(abs(q.xy) - b1, q.z);
-    q = rotationY(0.5) * q;
-    b1 *= 0.8;
+  p.z += translation;
+  float v = 1.0;
+  for (int i = 0; i < 6; i++) {
+    vec2 absXY = abs(p.xy) - v;
+    p = vec3(absXY, p.z);
+    p = rotationY(time * (0.1 + 0.05 * float(i))) * p;
+    p = rotationZ(time * (0.07 + 0.03 * float(i))) * p;
+    v *= 0.9;
   }
-  return fBox(q, vec3(0.2));
-}
 
-vec3 getNormal(vec3 p) {
+  float box1 = fBox(p, vec3(baseSize));
+  float box2 = fBox(p, vec3(smallBoxSize));
+  float d = -box1;
+  d = min(d, box2);
+  float sphere = length(p) - sphereRadius;
+  return max(d, sphere);
+}
+vec3 getNormal(vec3 p, float time) {
   float e = 0.001;
-  vec2 h = vec2(e, 0.0);
+  vec2 h = vec2(e,0.0);
   return normalize(vec3(
-    scene(p + h.xyy) - scene(p - h.xyy),
-    scene(p + h.yxy) - scene(p - h.yxy),
-    scene(p + h.yyx) - scene(p - h.yyx)
+    scene(p + h.xyy, time) - scene(p - h.xyy, time),
+    scene(p + h.yxy, time) - scene(p - h.yxy, time),
+    scene(p + h.yyx, time) - scene(p - h.yyx, time)
   ));
 }
-
 void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
-
   vec3 ro = camPos;
   vec3 ta = camTarget;
   vec3 f = normalize(ta - ro);
-  vec3 r = normalize(cross(vec3(0,1,0), f));
+  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
   vec3 u = cross(f, r);
-  vec3 rd = normalize(uv.x*r + uv.y*u + f);
+  vec3 rd = normalize(uv.x * r + uv.y * u + f);
 
   float t = 0.0;
   float d;
   bool hit = false;
-  for (int i = 0; i < 100; i++) {
+  for(int i=0; i<100; i++) {
     vec3 p = ro + rd * t;
-    d = scene(p);
-    if (d < 0.001) {
-      hit = true;
-      break;
-    }
-    if (t > 20.0) break;
+    d = scene(p, time);
+    if(d < 0.001) { hit = true; break; }
+    if(t > 20.0) break;
     t += d;
   }
 
-  vec3 col = vec3(0);
-  if (hit) {
+  vec3 col = vec3(0.0);
+  if(hit) {
     vec3 p = ro + rd * t;
-    vec3 n = getNormal(p);
-    vec3 lightDir = normalize(vec3(0.5, 1.0, 0.3));
-    float diff = max(dot(n, lightDir), 0.0);
-    float spec = pow(max(dot(reflect(-lightDir, n), -rd), 0.0), 32.0);
-    col = vec3(0.3, 0.5, 0.8) * diff + vec3(1.0) * spec * 0.2;
+    vec3 n = getNormal(p, time);
+    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
+    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
+    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
+    col = vec3(0.8,0.9,1.0) * diff + vec3(1.0) * spec * 0.4;
     col = pow(col, vec3(0.4545));
   }
-
   gl_FragColor = vec4(col, 1.0);
 }
-</script><script>
-const canvas = document.getElementById('glcanvas');
-const gl = canvas.getContext('webgl');
+</script>
+
+<!-- JavaScript -->
+<script>
+const canvas = document.getElementById("glcanvas");
+const gl = canvas.getContext("webgl");
+if (!gl) alert("WebGL nicht unterstützt");
+
 function resize() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
   gl.viewport(0, 0, canvas.width, canvas.height);
 }
-window.addEventListener('resize', resize);
+window.addEventListener("resize", resize);
 resize();
 
 function compileShader(type, source) {
@@ -132,11 +151,14 @@ const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').te
 
 const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
 const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
-const program = gl.createProgram();
 
+const program = gl.createProgram();
 gl.attachShader(program, vertexShader);
 gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
+if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
 gl.useProgram(program);
 
 const posLoc = gl.getAttribLocation(program, 'position');
@@ -148,56 +170,115 @@ const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
 const buffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-  -1, -1, 0, 1, -1, 0, -1, 1, 0,
-  -1, 1, 0, 1, -1, 0, 1, 1, 0
+  -1,-1,0, 1,-1,0, -1,1,0,
+  -1,1,0, 1,-1,0, 1,1,0
 ]), gl.STATIC_DRAW);
-
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Kamera
-let theta = 0.5;
-let phi = 1.0;
+// Kamera
+let theta = Math.PI/4;
+let phi = Math.PI/4;
 let radius = 4.0;
 let target = [0, 0, 0];
 
+function subtractVectors(a,b){ return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
+function addVectors(a,b){ return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
+function scaleVector(v,s){ return [v[0]*s, v[1]*s, v[2]*s]; }
+function lengthVector(v){ return Math.sqrt(v[0]**2 + v[1]**2 + v[2]**2); }
+function normalize(v){ let l = lengthVector(v); return l > 0.00001 ? scaleVector(v, 1/l) : [0,0,0]; }
+function cross(a,b){ return [a[1]*b[2]-a[2]*b[1], a[2]*b[0]-a[0]*b[2], a[0]*b[1]-a[1]*b[0]]; }
+
+function getCamPos() {
+  let sinPhi = Math.sin(phi);
+  let x = radius * sinPhi * Math.sin(theta);
+  let y = radius * Math.cos(phi);
+  let z = radius * sinPhi * Math.cos(theta);
+  return addVectors(target, [x, y, z]);
+}
+
 let isDragging = false;
+let isPanning = false;
 let lastX = 0, lastY = 0;
-canvas.addEventListener('mousedown', e => {
+
+canvas.addEventListener("mousedown", e => {
   isDragging = true;
+  isPanning = e.button === 2 || e.shiftKey;
   lastX = e.clientX;
   lastY = e.clientY;
 });
-canvas.addEventListener('mouseup', () => isDragging = false);
-canvas.addEventListener('mousemove', e => {
+canvas.addEventListener("mouseup", () => isDragging = false);
+canvas.addEventListener("mouseleave", () => isDragging = false);
+canvas.addEventListener("mousemove", e => {
   if (!isDragging) return;
   let dx = e.clientX - lastX;
   let dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
-  theta -= dx * 0.005;
-  phi -= dy * 0.005;
-  phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  if (isPanning) {
+    const panSpeed = 0.005 * radius;
+    let forward = normalize(subtractVectors(target, getCamPos()));
+    let right = normalize(cross(forward, [0,1,0]));
+    let up = cross(right, forward);
+    target = addVectors(target,
+      addVectors(scaleVector(right, -dx * panSpeed), scaleVector(up, dy * panSpeed))
+    );
+  } else {
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  }
 });
-canvas.addEventListener('wheel', e => {
-  radius += e.deltaY * 0.01;
-  radius = Math.max(1.0, Math.min(20.0, radius));
+canvas.addEventListener("wheel", e => {
+  e.preventDefault();
+  radius += e.deltaY * 0.0015;
+  radius = Math.max(0.5, Math.min(20, radius));
 });
+canvas.addEventListener("contextmenu", e => e.preventDefault());
 
-function getCamPos(t) {
-  let autoTheta = theta + t * 0.0001; // langsame Rotation
-  let x = radius * Math.sin(phi) * Math.sin(autoTheta);
-  let y = radius * Math.cos(phi);
-  let z = radius * Math.sin(phi) * Math.cos(autoTheta);
-  return [x + target[0], y + target[1], z + target[2]];
-}
+// Touch
+let touchMode = null;
+let touchStartDist = 0;
+canvas.addEventListener("touchstart", e => {
+  if (e.touches.length === 1) {
+    touchMode = "rotate";
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+  } else if (e.touches.length === 2) {
+    touchMode = "zoom";
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    touchStartDist = Math.sqrt(dx * dx + dy * dy);
+  }
+});
+canvas.addEventListener("touchmove", e => {
+  e.preventDefault();
+  if (touchMode === "rotate" && e.touches.length === 1) {
+    let dx = e.touches[0].clientX - lastX;
+    let dy = e.touches[0].clientY - lastY;
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  } else if (touchMode === "zoom" && e.touches.length === 2) {
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    let dist = Math.sqrt(dx * dx + dy * dy);
+    let delta = dist - touchStartDist;
+    radius -= delta * 0.01;
+    radius = Math.max(0.5, Math.min(20, radius));
+    touchStartDist = dist;
+  }
+});
+canvas.addEventListener("touchend", () => touchMode = null);
 
+// Render mit Auto-Rotation
 function render(t) {
-  let camPos = getCamPos(t);
-
   gl.viewport(0, 0, canvas.width, canvas.height);
-  gl.clear(gl.COLOR_BUFFER_BIT);
-  gl.useProgram(program);
+  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+  theta += 0.0015; // automatische Drehung
+  let camPos = getCamPos();
   gl.uniform2f(resLoc, canvas.width, canvas.height);
   gl.uniform1f(timeLoc, t * 0.001);
   gl.uniform3fv(camPosLoc, camPos);
@@ -206,5 +287,6 @@ function render(t) {
   requestAnimationFrame(render);
 }
 requestAnimationFrame(render);
-</script></body>
+</script>
+</body>
 </html>
