--- a/index.html
+++ b/index.html
@@ -1,79 +1,119 @@
-<!DOCTYPE html><html lang="de">
+<!DOCTYPE html>
+<html lang="de">
 <head>
 <meta charset="UTF-8" />
-<title>Langsame Shader-Rotation mit Punktlichtern</title>
+<title>Shader mit Wanderlichtern & ungleichmäßiger Animation</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <style>
-  html, body { margin: 0; padding: 0; overflow: hidden; background: black; height: 100%; }
-  canvas { width: 100vw; height: 100vh; display: block; }
+  html, body {
+    margin: 0; padding: 0; overflow: hidden; background: black;
+    height: 100%;
+    user-select: none;
+    touch-action: none;
+  }
+  canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    cursor: grab;
+    touch-action: none;
+  }
+  canvas:active {
+    cursor: grabbing;
+  }
 </style>
 </head>
 <body>
-<canvas id="glcanvas"></canvas><script type="x-shader/x-vertex" id="vs">
+<canvas id="glcanvas"></canvas>
+
+<!-- Vertex Shader -->
+<script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
-</script><script type="x-shader/x-fragment" id="fs">
+</script>
+
+<!-- Fragment Shader -->
+<script type="x-shader/x-fragment">
 precision highp float;
 
 uniform vec2 resolution;
 uniform float time;
 uniform vec3 camPos;
 uniform vec3 camTarget;
-uniform vec3 pointLights[5];
+uniform vec3 lights[5];
 
-mat3 rotY(float a) {
+mat3 rotationY(float a) {
   float s = sin(a), c = cos(a);
   return mat3(c,0.0,-s, 0.0,1.0,0.0, s,0.0,c);
 }
-
-mat3 rotZ(float a) {
+mat3 rotationZ(float a) {
   float s = sin(a), c = cos(a);
   return mat3(c,s,0.0, -s,c,0.0, 0.0,0.0,1.0);
 }
 
-float box(vec3 p, vec3 b) {
+float fBox(vec3 p, vec3 b) {
   vec3 d = abs(p) - b;
-  return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0);
+  return length(max(d, 0.0)) + min(max(d.x,max(d.y,d.z)), 0.0);
 }
 
-float scene(vec3 p, float t) {
-  float sx = 0.3 + 0.05 * sin(t * 0.05);
-  float sy = 0.3 + 0.05 * cos(t * 0.04);
-  float sz = 0.3 + 0.05 * sin(t * 0.03);
+float scene(vec3 p, float time) {
+  float sx = 0.3 + 0.1 * sin(time * 0.1 + 1.0);
+  float sy = 0.25 + 0.07 * cos(time * 0.13 + 2.0);
+  float sz = 0.35 + 0.09 * sin(time * 0.11 + 0.5);
+  float smallX = 0.1 + 0.05 * cos(time * 0.09 + 1.7);
+  float smallY = 0.12 + 0.04 * sin(time * 0.08 + 0.8);
+  float sphereRadius = 0.4 + 0.05 * sin(time * 0.07 + 1.0);
+  float translation = 0.1 * sin(time * 0.03);
 
-  // Rotation langsamer
-  p = rotY(t * 0.05) * p;
-  p = rotZ(t * 0.03) * p;
+  p.z += translation;
+  p = rotationY(time * 0.05) * p;
+  p = rotationZ(time * 0.03) * p;
 
-  return box(p, vec3(sx, sy, sz));
+  float v = 1.0;
+  for (int i = 0; i < 6; i++) {
+    vec2 absXY = abs(p.xy) - v;
+    p = vec3(absXY, p.z);
+    p = rotationY(time * (0.02 + 0.01 * float(i))) * p;
+    p = rotationZ(time * (0.015 + 0.005 * float(i))) * p;
+    v *= 0.9;
+  }
+
+  float box1 = fBox(p, vec3(sx, sy, sz));
+  float box2 = fBox(p, vec3(smallX, smallY, smallX));
+  float sphere = length(p) - sphereRadius;
+
+  float d = -box1;
+  d = min(d, box2);
+  return max(d, sphere);
 }
 
-vec3 getNormal(vec3 p, float t) {
+vec3 getNormal(vec3 p, float time) {
   float e = 0.001;
-  vec2 h = vec2(e, 0.0);
+  vec2 h = vec2(e,0.0);
   return normalize(vec3(
-    scene(p + h.xyy, t) - scene(p - h.xyy, t),
-    scene(p + h.yxy, t) - scene(p - h.yxy, t),
-    scene(p + h.yyx, t) - scene(p - h.yyx, t)
+    scene(p + h.xyy, time) - scene(p - h.xyy, time),
+    scene(p + h.yxy, time) - scene(p - h.yxy, time),
+    scene(p + h.yyx, time) - scene(p - h.yyx, time)
   ));
 }
 
 void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
+
   vec3 ro = camPos;
   vec3 ta = camTarget;
   vec3 f = normalize(ta - ro);
-  vec3 r = normalize(cross(vec3(0,1,0), f));
+  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
   vec3 u = cross(f, r);
   vec3 rd = normalize(uv.x * r + uv.y * u + f);
 
   float t = 0.0;
   float d;
   bool hit = false;
-  for(int i=0; i<100; i++) {
+  for(int i = 0; i < 100; i++) {
     vec3 p = ro + rd * t;
     d = scene(p, time);
     if(d < 0.001) { hit = true; break; }
@@ -81,53 +121,70 @@ void main() {
     t += d;
   }
 
-  vec3 col = vec3(0);
+  vec3 col = vec3(0.0);
   if(hit) {
     vec3 p = ro + rd * t;
     vec3 n = getNormal(p, time);
-
-    float diff = max(dot(n, normalize(vec3(0.7,1.0,0.8))), 0.0);
-    float spec = pow(max(dot(reflect(-normalize(vec3(0.7,1.0,0.8)), n), -rd), 0.0), 16.0);
-    col = vec3(0.8,0.9,1.0) * diff + vec3(1.0) * spec * 0.4;
-
-    for(int i = 0; i < 5; i++) {
-      vec3 L = normalize(pointLights[i] - p);
-      float dist = length(pointLights[i] - p);
-      float atten = 0.3 / (0.5 + dist * dist);
-      col += vec3(0.5, 0.4, 0.9) * max(dot(n, L), 0.0) * atten;
+    for (int i = 0; i < 5; i++) {
+      vec3 lightDir = normalize(lights[i] - p);
+      float diff = max(dot(n, lightDir), 0.0);
+      float spec = pow(max(dot(reflect(-lightDir, n), -rd), 0.0), 16.0);
+      float dist = length(lights[i] - p);
+      float attenuation = 0.4 / (dist * dist + 0.5);
+      col += (vec3(0.7, 0.8, 1.0) * diff + vec3(1.0) * spec * 0.3) * attenuation;
     }
-
     col = pow(col, vec3(0.4545));
   }
   gl_FragColor = vec4(col, 1.0);
 }
-</script><script>
-const gl = document.getElementById("glcanvas").getContext("webgl");
-const vs = document.getElementById("vs").textContent;
-const fs = document.getElementById("fs").textContent;
+</script>
 
-function compile(type, src) {
-  const s = gl.createShader(type);
-  gl.shaderSource(s, src);
-  gl.compileShader(s);
-  if (!gl.getShaderParameter(s, gl.COMPILE_STATUS)) {
-    console.error(gl.getShaderInfoLog(s));
+<!-- JavaScript -->
+<script>
+const canvas = document.getElementById("glcanvas");
+const gl = canvas.getContext("webgl");
+if (!gl) alert("WebGL nicht unterstützt");
+
+function resize() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+  gl.viewport(0, 0, canvas.width, canvas.height);
+}
+window.addEventListener("resize", resize);
+resize();
+
+function compileShader(type, source) {
+  const shader = gl.createShader(type);
+  gl.shaderSource(shader, source);
+  gl.compileShader(shader);
+  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+    console.error(gl.getShaderInfoLog(shader));
+    return null;
   }
-  return s;
+  return shader;
 }
 
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
+
+const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
+
 const program = gl.createProgram();
-gl.attachShader(program, compile(gl.VERTEX_SHADER, vs));
-gl.attachShader(program, compile(gl.FRAGMENT_SHADER, fs));
+gl.attachShader(program, vertexShader);
+gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
+if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
 gl.useProgram(program);
 
-const posLoc = gl.getAttribLocation(program, "position");
-const resLoc = gl.getUniformLocation(program, "resolution");
-const timeLoc = gl.getUniformLocation(program, "time");
-const camPosLoc = gl.getUniformLocation(program, "camPos");
-const camTargetLoc = gl.getUniformLocation(program, "camTarget");
-const lightsLoc = gl.getUniformLocation(program, "pointLights");
+const posLoc = gl.getAttribLocation(program, 'position');
+const resLoc = gl.getUniformLocation(program, 'resolution');
+const timeLoc = gl.getUniformLocation(program, 'time');
+const camPosLoc = gl.getUniformLocation(program, 'camPos');
+const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
+const lightsLoc = gl.getUniformLocation(program, 'lights');
 
 const buffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
@@ -138,38 +195,53 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-function resize() {
-  gl.canvas.width = window.innerWidth;
-  gl.canvas.height = window.innerHeight;
-  gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+// Kamera
+let theta = Math.PI/4;
+let phi = Math.PI/4;
+let radius = 4.0;
+let target = [0, 0, 0];
+
+function getCamPos() {
+  let sinPhi = Math.sin(phi);
+  let x = radius * sinPhi * Math.sin(theta);
+  let y = radius * Math.cos(phi);
+  let z = radius * sinPhi * Math.cos(theta);
+  return [x, y, z];
 }
-window.addEventListener("resize", resize);
-resize();
+
+// Wanderlichter
+const lightOffsets = Array.from({length:5}, () => [
+  Math.random()*2-1,
+  Math.random()*2-1,
+  Math.random()*2-1
+]);
+
+function getLightPositions(t) {
+  return lightOffsets.map((offset, i) => {
+    return [
+      Math.sin(t*0.2 + offset[0]*5 + i) * 1.5,
+      Math.cos(t*0.17 + offset[1]*5 + i) * 1.2,
+      Math.sin(t*0.23 + offset[2]*5 + i) * 1.5
+    ];
+  }).flat();
+}
 
 function render(t) {
-  let time = t * 0.001; // langsamer
+  let time = t * 0.001;
+  gl.viewport(0, 0, canvas.width, canvas.height);
+  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+  let camPos = getCamPos();
 
-  gl.uniform2f(resLoc, gl.canvas.width, gl.canvas.height);
+  gl.uniform2f(resLoc, canvas.width, canvas.height);
   gl.uniform1f(timeLoc, time);
-
-  const camPos = [3, 2, 3];
-  const target = [0, 0, 0];
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
-
-  const lights = [];
-  for (let i = 0; i < 5; i++) {
-    lights.push(
-      Math.sin(time * 0.3 + i) * 2.0,
-      Math.cos(time * 0.2 + i * 2.3) * 1.5,
-      Math.sin(time * 0.25 + i * 1.7) * 2.0
-    );
-  }
-  gl.uniform3fv(lightsLoc, new Float32Array(lights));
+  gl.uniform3fv(lightsLoc, new Float32Array(getLightPositions(time)));
 
   gl.drawArrays(gl.TRIANGLES, 0, 6);
   requestAnimationFrame(render);
 }
 requestAnimationFrame(render);
-</script></body>
+</script>
+</body>
 </html>
