--- a/index.html
+++ b/index.html
@@ -1,101 +1,50 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<title>Shader mit Wanderlichtern & ungleichmäßiger Animation</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<style>
-  html, body {
-    margin: 0; padding: 0; overflow: hidden; background: black;
-    height: 100%;
-    user-select: none;
-    touch-action: none;
-  }
-  canvas {
-    width: 100vw;
-    height: 100vh;
-    display: block;
-    cursor: grab;
-    touch-action: none;
-  }
-  canvas:active {
-    cursor: grabbing;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>Shader mit OrbitControls</title>
+  <style>
+    html, body { margin: 0; overflow: hidden; height: 100%; background: black; }
+    canvas { display: block; width: 100vw; height: 100vh; }
+  </style>
 </head>
 <body>
-<canvas id="glcanvas"></canvas>
+<script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.160.1/examples/js/controls/OrbitControls.min.js"></script>
 
-<!-- Vertex Shader -->
-<script type="x-shader/x-vertex">
-attribute vec3 position;
-void main() {
-  gl_Position = vec4(position, 1.0);
-}
-</script>
-
-<!-- Fragment Shader -->
-<script type="x-shader/x-fragment">
-precision highp float;
-
-uniform vec2 resolution;
+<script id="fragShader" type="x-shader/x-fragment">
 uniform float time;
-uniform vec3 camPos;
-uniform vec3 camTarget;
-uniform vec3 lights[5];
+uniform vec2 resolution;
+uniform vec3 lights[12];
 
-mat3 rotationY(float a) {
+mat3 rotY(float a) {
   float s = sin(a), c = cos(a);
   return mat3(c,0.0,-s, 0.0,1.0,0.0, s,0.0,c);
 }
-mat3 rotationZ(float a) {
+
+mat3 rotZ(float a) {
   float s = sin(a), c = cos(a);
   return mat3(c,s,0.0, -s,c,0.0, 0.0,0.0,1.0);
 }
 
-float fBox(vec3 p, vec3 b) {
-  vec3 d = abs(p) - b;
-  return length(max(d, 0.0)) + min(max(d.x,max(d.y,d.z)), 0.0);
-}
-
-float scene(vec3 p, float time) {
-  float sx = 0.3 + 0.1 * sin(time * 0.1 + 1.0);
-  float sy = 0.25 + 0.07 * cos(time * 0.13 + 2.0);
-  float sz = 0.35 + 0.09 * sin(time * 0.11 + 0.5);
-  float smallX = 0.1 + 0.05 * cos(time * 0.09 + 1.7);
-  float smallY = 0.12 + 0.04 * sin(time * 0.08 + 0.8);
-  float sphereRadius = 0.4 + 0.05 * sin(time * 0.07 + 1.0);
-  float translation = 0.1 * sin(time * 0.03);
-
-  p.z += translation;
-  p = rotationY(time * 0.05) * p;
-  p = rotationZ(time * 0.03) * p;
-
-  float v = 1.0;
-  for (int i = 0; i < 6; i++) {
-    vec2 absXY = abs(p.xy) - v;
-    p = vec3(absXY, p.z);
-    p = rotationY(time * (0.02 + 0.01 * float(i))) * p;
-    p = rotationZ(time * (0.015 + 0.005 * float(i))) * p;
-    v *= 0.9;
+float sdf(vec3 p, float t) {
+  p = rotY(t * 0.2) * p;
+  p = rotZ(t * 0.15) * p;
+  for (int i = 0; i < 3; i++) {
+    p = abs(p) - 0.5 + 0.2 * sin(t * 0.05 + float(i));
+    p = rotY(t * 0.05 + float(i)) * p;
+    p = rotZ(t * 0.03 + float(i)) * p;
   }
-
-  float box1 = fBox(p, vec3(sx, sy, sz));
-  float box2 = fBox(p, vec3(smallX, smallY, smallX));
-  float sphere = length(p) - sphereRadius;
-
-  float d = -box1;
-  d = min(d, box2);
-  return max(d, sphere);
+  return length(p) - 0.5;
 }
 
-vec3 getNormal(vec3 p, float time) {
+vec3 getNormal(vec3 p, float t) {
   float e = 0.001;
-  vec2 h = vec2(e,0.0);
+  vec2 h = vec2(e,0);
   return normalize(vec3(
-    scene(p + h.xyy, time) - scene(p - h.xyy, time),
-    scene(p + h.yxy, time) - scene(p - h.yxy, time),
-    scene(p + h.yyx, time) - scene(p - h.yyx, time)
+    sdf(p + h.xyy, t) - sdf(p - h.xyy, t),
+    sdf(p + h.yxy, t) - sdf(p - h.yxy, t),
+    sdf(p + h.yyx, t) - sdf(p - h.yyx, t)
   ));
 }
 
@@ -103,145 +52,105 @@ void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
 
-  vec3 ro = camPos;
-  vec3 ta = camTarget;
+  vec3 ro = vec3(2.5, 1.5, 3.0);
+  vec3 ta = vec3(0.0);
   vec3 f = normalize(ta - ro);
-  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
+  vec3 r = normalize(cross(vec3(0,1,0), f));
   vec3 u = cross(f, r);
   vec3 rd = normalize(uv.x * r + uv.y * u + f);
 
   float t = 0.0;
-  float d;
   bool hit = false;
-  for(int i = 0; i < 100; i++) {
-    vec3 p = ro + rd * t;
-    d = scene(p, time);
-    if(d < 0.001) { hit = true; break; }
-    if(t > 20.0) break;
+  vec3 p;
+  for (int i = 0; i < 100; i++) {
+    p = ro + rd * t;
+    float d = sdf(p, time);
+    if (d < 0.002) { hit = true; break; }
+    if (t > 20.0) break;
     t += d;
   }
 
   vec3 col = vec3(0.0);
-  if(hit) {
-    vec3 p = ro + rd * t;
+  if (hit) {
     vec3 n = getNormal(p, time);
-    for (int i = 0; i < 5; i++) {
-      vec3 lightDir = normalize(lights[i] - p);
-      float diff = max(dot(n, lightDir), 0.0);
-      float spec = pow(max(dot(reflect(-lightDir, n), -rd), 0.0), 16.0);
+    for (int i = 0; i < 12; i++) {
+      vec3 L = normalize(lights[i] - p);
+      float diff = max(dot(n, L), 0.0);
       float dist = length(lights[i] - p);
-      float attenuation = 0.4 / (dist * dist + 0.5);
-      col += (vec3(0.7, 0.8, 1.0) * diff + vec3(1.0) * spec * 0.3) * attenuation;
+      float atten = 0.3 / (dist * dist + 0.1);
+      col += (vec3(0.6,0.8,1.0) * diff + vec3(1.0) * pow(max(dot(reflect(-L, n), -rd), 0.0), 8.0)) * atten;
     }
-    col = pow(col, vec3(0.4545));
+    col = pow(col, vec3(0.45));
   }
+
   gl_FragColor = vec4(col, 1.0);
 }
 </script>
 
-<!-- JavaScript -->
 <script>
-const canvas = document.getElementById("glcanvas");
-const gl = canvas.getContext("webgl");
-if (!gl) alert("WebGL nicht unterstützt");
+const scene = new THREE.Scene();
+const camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 100);
+camera.position.set(2.5, 1.5, 3.0);
 
-function resize() {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-  gl.viewport(0, 0, canvas.width, canvas.height);
-}
-window.addEventListener("resize", resize);
-resize();
+const renderer = new THREE.WebGLRenderer({ antialias: true });
+renderer.setSize(window.innerWidth, window.innerHeight);
+document.body.appendChild(renderer.domElement);
 
-function compileShader(type, source) {
-  const shader = gl.createShader(type);
-  gl.shaderSource(shader, source);
-  gl.compileShader(shader);
-  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-    console.error(gl.getShaderInfoLog(shader));
-    return null;
+// OrbitControls mit Auto-Rotate
+const controls = new THREE.OrbitControls(camera, renderer.domElement);
+controls.enableDamping = true;
+controls.dampingFactor = 0.1;
+controls.autoRotate = true;
+controls.autoRotateSpeed = 0.5;
+controls.zoomSpeed = 0.8;
+controls.enablePan = false;
+
+// Plane + ShaderMaterial
+const geometry = new THREE.PlaneBufferGeometry(2, 2);
+const uniforms = {
+  time: { value: 0 },
+  resolution: { value: new THREE.Vector2(window.innerWidth, window.innerHeight) },
+  lights: { value: new Array(12).fill().map(() => new THREE.Vector3()) }
+};
+
+const material = new THREE.ShaderMaterial({
+  fragmentShader: document.getElementById("fragShader").textContent,
+  uniforms: uniforms
+});
+const quad = new THREE.Mesh(geometry, material);
+scene.add(quad);
+
+window.addEventListener('resize', () => {
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  uniforms.resolution.value.set(window.innerWidth, window.innerHeight);
+});
+
+// Zufällige Lichtbewegungen
+const lightOffsets = Array.from({length: 12}, () =>
+  [Math.random()*10, Math.random()*10, Math.random()*10]
+);
+
+function updateLights(t) {
+  for (let i = 0; i < 12; i++) {
+    uniforms.lights.value[i].set(
+      Math.sin(t * 0.8 + lightOffsets[i][0]) * 2.0,
+      Math.cos(t * 1.1 + lightOffsets[i][1]) * 1.5,
+      Math.sin(t * 1.3 + lightOffsets[i][2]) * 2.0
+    );
   }
-  return shader;
 }
 
-const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
-const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
-
-const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
-const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
-
-const program = gl.createProgram();
-gl.attachShader(program, vertexShader);
-gl.attachShader(program, fragmentShader);
-gl.linkProgram(program);
-if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-  console.error(gl.getProgramInfoLog(program));
+// Renderloop
+function animate(time) {
+  requestAnimationFrame(animate);
+  uniforms.time.value = time * 0.001;
+  updateLights(uniforms.time.value);
+  controls.update();
+  renderer.render(scene, camera);
 }
-gl.useProgram(program);
-
-const posLoc = gl.getAttribLocation(program, 'position');
-const resLoc = gl.getUniformLocation(program, 'resolution');
-const timeLoc = gl.getUniformLocation(program, 'time');
-const camPosLoc = gl.getUniformLocation(program, 'camPos');
-const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
-const lightsLoc = gl.getUniformLocation(program, 'lights');
-
-const buffer = gl.createBuffer();
-gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
-gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-  -1,-1,0, 1,-1,0, -1,1,0,
-  -1,1,0, 1,-1,0, 1,1,0
-]), gl.STATIC_DRAW);
-gl.enableVertexAttribArray(posLoc);
-gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
-
-// Kamera
-let theta = Math.PI/4;
-let phi = Math.PI/4;
-let radius = 4.0;
-let target = [0, 0, 0];
-
-function getCamPos() {
-  let sinPhi = Math.sin(phi);
-  let x = radius * sinPhi * Math.sin(theta);
-  let y = radius * Math.cos(phi);
-  let z = radius * sinPhi * Math.cos(theta);
-  return [x, y, z];
-}
-
-// Wanderlichter
-const lightOffsets = Array.from({length:5}, () => [
-  Math.random()*2-1,
-  Math.random()*2-1,
-  Math.random()*2-1
-]);
-
-function getLightPositions(t) {
-  return lightOffsets.map((offset, i) => {
-    return [
-      Math.sin(t*0.2 + offset[0]*5 + i) * 1.5,
-      Math.cos(t*0.17 + offset[1]*5 + i) * 1.2,
-      Math.sin(t*0.23 + offset[2]*5 + i) * 1.5
-    ];
-  }).flat();
-}
-
-function render(t) {
-  let time = t * 0.001;
-  gl.viewport(0, 0, canvas.width, canvas.height);
-  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-  let camPos = getCamPos();
-
-  gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, time);
-  gl.uniform3fv(camPosLoc, camPos);
-  gl.uniform3fv(camTargetLoc, target);
-  gl.uniform3fv(lightsLoc, new Float32Array(getLightPositions(time)));
-
-  gl.drawArrays(gl.TRIANGLES, 0, 6);
-  requestAnimationFrame(render);
-}
-requestAnimationFrame(render);
+animate();
 </script>
 </body>
 </html>
